# ppf_matching

./: .gitignore  README.md
data/: angel4.ply  angel_bird_gnome1.ply  cheff2_simple.ply  cheff_simple.ply  cheff_small.ply  chicken2.ply  chicken3.ply  chicken_small.ply  chicken_small2.ply  cloud_icra.pcd  im4.xyz  im41.xyz  parasaurolophus_6700_2.ply  parasaurolophus_low_normals.ply  rs1_normals2.ply  trex_small.ply
scripts/: compute_ppf.m  gen_rand_quat.m  getRandom_uniform.m  get_duplicates.m  get_transform_mat.m  icp_mod_point_plane_pyr.m  icp_p_pl.m  icp_pl_improvements.m  minimize_point_to_plane.m  q_getRandom.m  sample_pc_stable.m  sample_pc_uniform.m  test_alpha.m  (+2 more)
src/PPFMatching/PPFMatching/: CMakeLists.txt  PPFMatching.vcproj  Pose3D.cpp  Pose3D.hpp  RGBDMatcher.cpp  RGBDMatcher.h  THashInt.c  THashInt.cpp  THashInt.h  TRgbGL.h  WindowGL.c  WindowGL.h  c_utils.c  c_utils.cpp  c_utils.h  c_utils.hpp  depth_to_3d.cpp  depth_to_3d.h  dsyevc3.c  dsyevh3.c  dsyevh3.h  dsyevq3.c  dsytrd3.c  fasthash.c  fasthash.h  gdiam.cpp  gdiam.hpp  gl_utils.cpp  gl_utils.h  hash_murmur.h  hash_murmur.hpp  helpers.cpp  helpers.h  icp.cpp  icp.hpp  main.c  main.cpp  main_cv.cpp  main_cv_simple.cpp  normal.cpp  (+26 more)
src/PPFMatching/PPFMatching/Debug/: BuildLog.htm  PPFMatching.exe.embed.manifest  PPFMatching.exe.intermediate.manifest  mt.dep  vc90.idb
src/PPFMatching/PPFMatching/Release/: BuildLog.htm  mt.dep  vc90.idb
src/PPFMatching/PPFMatching/includes/flann/: flann.h
src/PPFMatching/PPFMatching/libs/: tommyhash.lib
src/PPFMatching/PPFMatching/old_code/: c_utils.cpp
(+353 files in other folders)
